src/objects/Application_Review__c.object
<CustomObject>
    <description>This allows readers to document their application review</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Reviews</relationshipLabel>
        <relationshipName>Application_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision_Recommendation__c</fullName>
        <description>This is the decision recommendation of the reviewer.</description>
        <label>Decision Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Admission_Decision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminated</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>Decision_Recommendation__c</columns>
        <columns>Date_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Application Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>